--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!-- everything here works, no need to change it! -->
 
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
+  <head>
+    <meta charset="utf8" />
+    <title>Week 3 Project</title>
 
-<head>
-  <meta charset='utf8'>
-  <title>Week 3 Project</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-  <link rel="stylesheet" href="./style.css">
-</head>
+  <body>
+    <section id="user-input">
+      <button id="replaceSubstring-button">replace substring</button>
+      <button id="choices-button">choices</button>
+      <button id="sortCharacters-button">sort characters</button>
+      <button id="reverseWords-button">reverse words</button>
+      <button id="repeatCharacters-button">repeat characters</button>
+    </section>
 
-<body>
-  <section id='user-input'>
-    <button id='replaceSubstring-button'>replace substring</button>
-    <button id='choices-button'>choices</button>
-    <button id='sortCharacters-button'>sort characters</button>
-    <button id='reverseWords-button'>reverse words</button>
-    <button id='repeatCharacters-button'>repeat characters</button>
-  </section>
-
-  <script src='./challenges/replace-substring.js'></script>
-  <script src='./challenges/choices.js'></script>
-  <script src='./challenges/sort-characters.js'></script>
+    <!-- <script src='./challenges/replace-substring.js'></script> -->
+    <script src="./challenges/choices.js"></script>
+    <!-- <script src='./challenges/sort-characters.js'></script>
   <script src='./challenges/reverse-words.js'></script>
-  <script src='./challenges/repeat-characters.js'></script>
-</body>
-
+  <script src='./challenges/repeat-characters.js'></script> -->
+  </body>
 </html>
